Feat: New Project - pr-compliance-guard

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,30 @@
+#.github\workflows\ci.yml
+
 name: Python Engineering Lab CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, develop]
   pull_request:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * 1"  # Every Monday 06:00 UTC
 
 jobs:
+
+  # ==================================================
+  # Shared Python Setup (reused via YAML anchor)
+  # ==================================================
 
   # =============================
   # PRICE CALCULATOR - UNIT
   # =============================
   price-unit:
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, '') || github.event_name == 'pull_request'
+
+    strategy:
+      matrix:
+        python-version: ["3.11"]
 
     defaults:
       run:
@@ -20,6 +32,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -27,7 +45,11 @@ jobs:
           pip install -e .
 
       - name: Run unit tests
-        run: pytest tests/test_price.py --cov=calculator --cov-fail-under=90
+        run: |
+          pytest tests/test_price.py \
+            --cov=calculator \
+            --cov-report=term-missing \
+            --cov-fail-under=90
 
 
   # =============================
@@ -35,7 +57,7 @@ jobs:
   # =============================
   price-bdd:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name != 'schedule'   # optional: skip BDD on cron
 
     defaults:
       run:
@@ -44,13 +66,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install -e .
 
       - name: Run BDD tests
-        run: pytest tests/test_price_bdd.py
+        run: pytest tests/test_price_bdd.py -v
 
 
   # =============================
@@ -59,12 +87,22 @@ jobs:
   compliance-unit:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+
     defaults:
       run:
         working-directory: pr-compliance-guard
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -72,7 +110,11 @@ jobs:
           pip install -e .
 
       - name: Run unit tests
-        run: pytest tests/test_engine.py --cov=compliance --cov-fail-under=90
+        run: |
+          pytest tests/test_engine.py \
+            --cov=compliance \
+            --cov-report=term-missing \
+            --cov-fail-under=90
 
 
   # =============================
@@ -80,7 +122,7 @@ jobs:
   # =============================
   compliance-bdd:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name != 'schedule'
 
     defaults:
       run:
@@ -89,10 +131,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install -e .
 
       - name: Run BDD tests
-        run: pytest tests/test_compliance_bdd.py
+        run: pytest tests/test_compliance_bdd.py -v
