--- a/pr-compliance-guard/pyproject.toml
+++ b/pr-compliance-guard/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "pr-compliance-guard"
 version = "0.1.0"
@@ -5,3 +9,7 @@ dependencies = ["pyyaml"]
 
 [project.scripts]
 pr-guard = "compliance.cli:main"
+
+[tool.setuptools]
+packages = ["compliance", "config"]
+
